# MLOps

./: .gitignore  README.md  full_pipeline_draft_2.ipynb
stock-project/: .dockerignore  Dockerfile  Dockerfile_bck  README.md  create_deployments.py  pyproject.toml  requirements.in  requirements.txt  requirements_bck.txt  requirements_bck2.txt
stock-project/conf/: logging.yml
stock-project/conf/base/: catalog.yml  parameters.yml  parameters_data_drift.yml  parameters_data_engineering.yml  parameters_data_ingestion.yml  parameters_data_preprocessing.yml  parameters_data_scalling.yml  parameters_data_splitting.yml  parameters_data_unit_tests.yml  parameters_data_wrangling.yml  parameters_model_assessment.yml  parameters_model_predict.yml  parameters_model_train.yml
stock-project/docs/: conf.py  index.rst
stock-project/docs/source/: conf.py  index.rst  modules.rst  stock_project.pipelines.data_drift.rst  stock_project.pipelines.data_ingestion.rst  stock_project.pipelines.data_preprocessing.rst  stock_project.pipelines.data_splitting.rst  stock_project.pipelines.data_unit_tests.rst  stock_project.pipelines.model_assessment.rst  stock_project.pipelines.model_predict.rst  stock_project.pipelines.model_train.rst  stock_project.pipelines.rst  stock_project.rst
stock-project/flows/: kedro_flows.py
stock-project/gx/: great_expectations.yml
stock-project/gx/expectations/: .ge_store_backend_id  categorical_expectations.json  label_expectations.json  numerical_expectations.json  stock_auto_suite.json
stock-project/notebooks/: eda copy.ipynb  eda.ipynb
stock-project/src/stock_project/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  run_kedro_pipeline.py  settings.py
stock-project/src/stock_project/pipelines/data_drift/: __init__.py  nodes.py  pipeline.py
stock-project/src/stock_project/pipelines/data_engineering/: __init__.py  indicators.py  nodes.py  pipeline.py
stock-project/src/stock_project/pipelines/data_ingestion/: __init__.py  auto_expectations.py  nodes.py  pipeline.py
stock-project/src/stock_project/pipelines/data_preprocessing/: __init__.py  feature_scaler.py  indicators.py  nodes.py  pipeline.py
stock-project/src/stock_project/pipelines/data_preprocessing/classes/: FeatureScaler.py  FeatureSelector.py  PurgedKFold.py
stock-project/src/stock_project/pipelines/data_scalling/: __init__.py  nodes.py  pipeline.py
stock-project/src/stock_project/pipelines/data_splitting/: __init__.py  nodes.py  pipeline.py
stock-project/src/stock_project/pipelines/data_unit_tests/: __init__.py  auto_expectations.py  nodes.py  pipeline.py
stock-project/src/stock_project/pipelines/data_wrangling/: __init__.py  nodes.py  pipeline.py
stock-project/src/stock_project/pipelines/model_assessment/: __init__.py  feature_selection.py  nodes.py  pipeline.py  purged_kfold.py  scaler.py
stock-project/src/stock_project/pipelines/model_assessment/classes/: DynamicScaler.py  FeatureSelector.py  PurgedKFold.py
stock-project/src/stock_project/pipelines/model_predict/: __init__.py  nodes.py  pipeline.py
stock-project/src/stock_project/pipelines/model_train/: __init__.py  nodes.py  pipeline.py
stock-project/tests/pipelines/data_drift/: TODO.md  test_pipeline.py  test_pipelines.py
stock-project/tests/pipelines/data_ingestion/: test_pipeline.py
stock-project/tests/pipelines/data_preprocessing/: test_pipeline.py
stock-project/tests/pipelines/data_scalling/: test_pipeline.py
stock-project/tests/pipelines/data_splitting/: test_pipeline.py
stock-project/tests/pipelines/data_unit_tests/: test_pipeline.py
stock-project/tests/pipelines/data_wrangling/: test_pipeline.py
stock-project/tests/pipelines/model_assessment/: test_pipeline.py
stock-project/tests/pipelines/model_predict/: TODO.md  test_pipeline.py
stock-project/tests/pipelines/model_train/: test_pipeline.py
