[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9,<3.12"
name = "stock_project"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "aiobotocore==2.4.2",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aioitertools==0.12.0",
    "aiomysql==0.2.0",
    "aiosignal==1.3.2",
    "aiosqlite==0.21.0",
    "alembic==1.16.2",
    "altair==4.2.2",
    "analytics-python==1.4.post1",
    "antlr4-python3-runtime==4.9.3",
    "anyconfig==0.10.1",
    "anyio==4.6.0",
    "appdirs==1.4.4",
    "apprise==1.9.3",
    "apscheduler==3.11.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asgi-lifespan==2.1.0",
    "asttokens==3.0.0",
    "async-lru==2.0.5",
    "async-timeout==5.0.1",
    "asyncpg==0.29.0",
    "attrs==25.3.0",
    "avro==1.11.3",
    "babel==2.17.0",
    "backoff==1.10.0",
    "beautifulsoup4==4.13.4",
    "binaryornot==0.4.4",
    "bleach==6.2.0",
    "boto3==1.24.59",
    "botocore==1.27.59",
    "build==1.2.2.post1",
    "cachetools==5.5.2",
    "category-encoders==2.7.0",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "colorlog==6.9.0",
    "comm==0.2.2",
    "commonmark==0.9.1",
    "confluent-kafka==2.3.0",
    "contourpy==1.3.2",
    "cookiecutter==2.6.0",
    "coolname==2.2.0",
    "croniter==5.0.1",
    "cryptography==45.0.4",
    "curl-cffi==0.11.4",
    "cycler==0.12.1",
    "dacite==1.9.2",
    "dateparser==1.2.2",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "dnspython==2.7.0",
    "docker==7.0.0",
    "durationpy==0.10",
    "dynaconf==3.2.11",
    "email-validator==2.2.0",
    "entrypoints==0.4",
    "evidently==0.3.0",
    "exceptiongroup==1.3.0",
    "executing==2.2.0",
    "fastavro==1.8.4",
    "fastjsonschema==2.21.1",
    "flaml==1.2.4",
    "flask==2.2.5",
    "fonttools==4.58.4",
    "fqdn==1.5.1",
    "frozendict==2.4.6",
    "frozenlist==1.7.0",
    "fsspec==2022.11.0",
    "furl==2.1.4",
    "future==1.0.0",
    "gcsfs==2022.11.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "google-api-core==2.25.1",
    "google-auth==2.40.3",
    "google-auth-oauthlib==1.2.2",
    "google-cloud-core==2.4.3",
    "google-cloud-storage==3.1.1",
    "google-crc32c==1.7.1",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.70.0",
    "graphene==3.4.3",
    "graphql-core==3.2.6",
    "graphql-relay==3.2.0",
    "graphviz==0.21",
    "great-expectations==0.15.12",
    "greenlet==3.2.3",
    "griffe==1.7.3",
    "gunicorn==21.2.0",
    "h11==0.16.0",
    "h2==4.2.0",
    "hopsworks==4.2.6",
    "hpack==4.1.0",
    "hsml==3.7.2",
    "htmlmin==0.1.12",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "humanize==4.12.3",
    "hyperframe==6.1.0",
    "idna==3.10",
    "imagehash==4.3.1",
    "importlib-metadata==7.2.1",
    "importlib-resources==6.4.5",
    "ipykernel==6.29.5",
    "ipython==9.3.0",
    "ipython-pygments-lexers==1.1.1",
    "isoduration==20.11.0",
    "itsdangerous==2.2.0",
    "javaobj-py3==0.4.4",
    "jedi==0.19.2",
    "jinja2==3.0.3",
    "jinja2-humanize-extension==0.4.0",
    "jmespath==1.0.1",
    "joblib==1.5.1",
    "json5==0.12.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.16.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.3",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "kaleido==0.2.1",
    "kedro==0.19.5",
    "kedro-datasets==3.0.0",
    "kedro-docker==0.6.2",
    "kedro-mlflow==0.12.2",
    "kedro-telemetry==0.4.0",
    "kiwisolver==1.4.8",
    "kubernetes==31.0.0",
    "lazy-loader==0.4",
    "lightgbm==3.3.5",
    "llvmlite==0.41.1",
    "mako==1.3.10",
    "markdown==3.8.2",
    "markupsafe==3.0.2",
    "matplotlib==3.7.3",
    "matplotlib-inline==0.1.7",
    "mistune==3.1.3",
    "mlflow==2.11.3",
    "mock==5.2.0",
    "monotonic==1.6",
    "more-itertools==10.7.0",
    "multidict==6.6.0",
    "multimethod==1.12",
    "multitasking==0.0.11",
    "nannyml==0.10.5",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "nltk==3.9.1",
    "notebook==7.4.3",
    "notebook-shim==0.2.4",
    "numba==0.58.1",
    "numpy==1.24.4",
    "nvidia-nccl-cu12==2.27.5",
    "oauthlib==3.3.1",
    "omegaconf==2.3.0",
    "opensearch-py==2.4.2",
    "optuna==3.6.1",
    "optuna-integration==4.4.0",
    "orjson==3.9.4",
    "pandas==2.0.3",
    "pandocfilters==1.5.0",
    "parso==0.8.3",
    "pathy==0.10.2",
    "pathy-ml==0.2.0",
    "patsy==0.5.3",
    "pendulum==2.1.2",
    "pexpect==4.8.0",
    "phonenumbers==8.13.16",
    "pickleshare==0.7.5",
    "platformdirs==3.10.0",
    "pluggy==1.2.0",
    "pooch==1.7.0",
    "portend==3.0.0",
    "pre-commit==2.20.0",
    "prettytable==3.8.0",
    "priority==2.0.1",
    "prometheus-client==0.17.1",
    "prompt-toolkit==3.0.41",
    "protobuf==4.23.3",
    "psutil==5.9.5",
    "psycopg2==2.9.6",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "pyasn1==0.5.0",
    "pyasn1-modules==0.3.0",
    "pycparser==2.21",
    "pydantic==2.4.2",
    "pydot==1.4.2",
    "pyerfa==2.0.0",
    "pyflakes==3.0.1",
    "pygments==2.15.1",
    "pyjwt==2.7.0",
    "pylint==2.17.5",
    "pymongo==4.3.3",
    "pyopenssl==23.2.0",
    "pyparsing==3.1.1",
    "pyrsistent==0.19.3",
    "pytest==8.0.2",
    "pytest-cov==4.1.0",
    "pytest-xdist==3.3.1",
    "python-dateutil==2.8.2",
    "python-editor==1.0.4",
    "python-multipart==0.0.6",
    "python-slugify==8.0.1",
    "python-socketio==5.7.2",
    "python-yaml==6.0.1",
    "pytz==2023.3",
    "pytoolconfig==1.2.4",
    "pytools==2023.1.1",
    "pytrends==4.10.0",
    "pyyaml-env-tag==0.1.0",
    "pyzmq==25.1.1",
    "qasync==0.22.0",
    "regex==2023.8.8",
    "requests==2.31.0",
    "requests-oauthlib==1.3.1",
    "requests-toolbelt==0.10.1",
    "rfc3986==1.5.0",
    "rich==13.5.2",
    "rsa==4.9",
    "s3fs==2022.11.0",
    "sacremoses==0.0.53",
    "scikit-learn==1.3.1",
    "scipy==1.11.3",
    "seaborn==0.12.2",
    "sentence-transformers==2.2.2",
    "sentinels==1.0.0",
    "setuptools==69.0.0",
    "sentry-sdk==1.27.1",
    "sentry-sdk-aiohttp==0.0.2",
    "shellingham==1.5.0",
    "simplejson==3.18.0",
    "six==1.16.0",
    "sniffio==1.3.0",
    "snowflake-connector-python==3.0.5",
    "snownlp==0.12.0",
    "snudown==1.0.4",
    "sortedcontainers==2.4.0",
    "sqlalchemy==2.0.21",
    "sqlalchemy-utils==0.41.3",
    "sqlparse==0.4.4",
    "starlette==0.27.0",
    "statsmodels==0.14.0",
    "structlog==24.1.0",
    "subprocess32==3.5.4",
    "suds-jurko==0.6",
    "tenacity==8.2.2",
    "termcolor==2.3.0",
    "terminado==0.20.4",
    "threadpoolctl==3.2.0",
    "tifffile==2023.10.10",
    "tomli==2.0.1",
    "toolz==0.12.0",
    "tornado==6.3.3",
    "tqdm==4.66.1",
    "traitlets==5.9.0",
    "typing_extensions==4.7.1",
    "tzdata==2023.3",
    "tzlocal==5.0.1",
    "typer==0.9.0",
    "types-PyYAML==6.0.12.3",
    "typing-inspect==0.9.0",
    "ujson==5.7.0",
    "urllib3==2.0.4",
    "uvicorn==0.23.2",
    "uvloop==0.17.0",
    "validators==0.20.0",
    "vine==5.0.0",
    "watchfiles==0.19.0",
    "wcwidth==0.2.6",
    "webencodings==0.5.1",
    "websockets==11.0.3",
    "wheel==0.40.0",
    "yarl==1.9.2",
    "zipp==3.16.2"
]

[project.scripts]
"stock-project" = "stock_project.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
docs = [
    "docutils<0.21",
    "sphinx>=5.3,<7.3",
    "sphinx_rtd_theme==2.0.0",
    "nbsphinx==0.8.1",
    "sphinx-autodoc-typehints==1.20.2",
    "sphinx_copybutton==0.5.2",
    "ipykernel>=5.3, <7.0",
    "Jinja2<3.2.0",
    "myst-parser>=1.0,<2.1"
]
dev = [
    "pytest-cov~=3.0",
    "pytest-mock>=1.7.1, <2.0",
    "pytest~=7.2",
    "ruff~=0.1.8"
]

[tool.setuptools.dynamic]
version = {attr = "stock_project.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro]
package_name = "stock_project"
project_name = "stock-project"
kedro_init_version = "0.19.14"
tools = "['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure']"
example_pipeline = "True"
source_dir = "src"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/stock_project -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 88
show-fixes = true
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E501"]  # Ruff format takes care of line-too-long

[tool.kedro_telemetry]
project_id = "bdd2ebb53ca942f9b3419807db001ef7"
