[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9,<3.12"
name = "stock_project"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "aiobotocore==2.4.2",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aioitertools==0.12.0",
    "aiomysql==0.2.0",
    "aiosignal==1.3.2",
    "aiosqlite==0.21.0",
    "alembic==1.16.2",
    "altair==4.2.2",
    "analytics-python==1.4.post1",
    "antlr4-python3-runtime==4.9.3",
    "anyconfig==0.10.1",
    "anyio==4.6.0",
    "appdirs==1.4.4",
    "apprise==1.9.3",
    "apscheduler==3.11.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asgi-lifespan==2.1.0",
    "asttokens==3.0.0",
    "async-lru==2.0.5",
    "async-timeout==5.0.1",
    "asyncpg==0.29.0",
    "attrs==25.3.0",
    "avro==1.11.3",
    "babel==2.17.0",
    "backoff==1.10.0",
    "beautifulsoup4==4.13.4",
    "binaryornot==0.4.4",
    "bleach==6.2.0",
    "boto3==1.24.59",
    "botocore==1.27.59",
    "build==1.2.2.post1",
    "cachetools==5.5.2",
    "category-encoders==2.7.0",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "colorlog==6.9.0",
    "comm==0.2.2",
    "commonmark==0.9.1",
    "confluent-kafka==2.3.0",
    "contourpy==1.3.2",
    "cookiecutter==2.6.0",
    "coolname==2.2.0",
    "coverage==7.9.1",
    "croniter==5.0.1",
    "cryptography==45.0.4",
    "curl-cffi==0.11.4",
    "cycler==0.12.1",
    "dacite==1.9.2",
    "dateparser==1.2.2",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "dnspython==2.7.0",
    "docker==7.0.0",
    "durationpy==0.10",
    "dynaconf==3.2.11",
    "email-validator==2.2.0",
    "entrypoints==0.4",
    "evidently==0.3.0",
    "exceptiongroup==1.3.0",
    "executing==2.2.0",
    "fastavro==1.8.4",
    "fastjsonschema==2.21.1",
    "flaml==1.2.4",
    "flask==2.2.5",
    "fonttools==4.58.4",
    "fqdn==1.5.1",
    "frozendict==2.4.6",
    "frozenlist==1.7.0",
    "fsspec==2022.11.0",
    "furl==2.1.4",
    "future==1.0.0",
    "gcsfs==2022.11.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "google-api-core==2.25.1",
    "google-auth==2.40.3",
    "google-auth-oauthlib==1.2.2",
    "google-cloud-core==2.4.3",
    "google-cloud-storage==3.1.1",
    "google-crc32c==1.7.1",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.70.0",
    "graphene==3.4.3",
    "graphql-core==3.2.6",
    "graphql-relay==3.2.0",
    "graphviz==0.21",
    "great-expectations==0.15.12",
    "greenlet==3.2.3",
    "griffe==1.7.3",
    "grpcio==1.73.1",
    "gunicorn==21.2.0",
    "h11==0.16.0",
    "h2==4.2.0",
    "hopsworks==4.2.6",
    "hopsworks-aiomysql==0.2.1",
    "hpack==4.1.0",
    "hsml==3.7.2",
    "htmlmin==0.1.12",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "humanize==4.12.3",
    "hyperframe==6.1.0",
    "idna==3.10",
    "imagehash==4.3.1",
    "importlib-metadata==7.2.1",
    "importlib-resources==6.4.5",
    "iniconfig==2.1.0",
    "ipykernel==6.29.5",
    "ipython==9.3.0",
    "ipython-pygments-lexers==1.1.1",
    "isoduration==20.11.0",
    "itsdangerous==2.2.0",
    "javaobj-py3==0.4.4",
    "jedi==0.19.2",
    "jinja2==3.0.3",
    "jinja2-humanize-extension==0.4.0",
    "jmespath==1.0.1",
    "joblib==1.5.1",
    "json5==0.12.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.16.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.3",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "kaleido==0.2.1",
    "kedro==0.19.5",
    "kedro-datasets==3.0.0",
    "kedro-docker==0.6.2",
    "kedro-mlflow==0.12.2",
    "kedro-telemetry==0.4.0",
    "kiwisolver==1.4.8",
    "kubernetes==31.0.0",
    "lazy-loader==0.4",
    "lightgbm==3.3.5",
    "llvmlite==0.41.1",
    "mako==1.3.10",
    "markdown==3.8.2",
    "markupsafe==3.0.2",
    "matplotlib==3.7.3",
    "matplotlib-inline==0.1.7",
    "mistune==3.1.3",
    "mlflow==2.11.3",
    "mock==5.2.0",
    "monotonic==1.6",
    "more-itertools==10.7.0",
    "multidict==6.6.0",
    "multimethod==1.12",
    "multitasking==0.0.11",
    "nannyml==0.10.5",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "nltk==3.9.1",
    "notebook==7.4.3",
    "notebook-shim==0.2.4",
    "numba==0.58.1",
    "numpy==1.24.4",
    "nvidia-nccl-cu12==2.27.5",
    "oauthlib==3.3.1",
    "omegaconf==2.3.0",
    "opensearch-py==2.4.2",
    "optuna==3.6.1",
    "optuna-integration==4.4.0",
    "orderedmultidict==1.0.1",
    "orjson==3.10.18",
    "overrides==7.7.0",
    "packaging==23.2",
    "pandas==1.5.3",
    "pandas-ta==0.3.14b0",
    "pandocfilters==1.5.1",
    "parse==1.20.2",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "patsy==1.0.1",
    "peewee==3.18.1",
    "pendulum==2.1.2",
    "pexpect==4.9.0",
    "phik==0.12.4",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "plotly==5.21.0",
    "pluggy==1.3.0",
    "pre-commit-hooks==5.0.0",
    "prefect==2.20.20",
    "prometheus-client==0.22.1",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.2",
    "proto-plus==1.26.1",
    "protobuf==4.25.8",
    "psutil==7.0.0",
    "psycopg2-binary==2.9.10",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==14.0.2",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pycryptodomex==3.23.0",
    "pydantic==1.10.22",
    "pydantic-core==2.35.2",
    "pyfiglet==0.8.post1",
    "pygments==2.19.2",
    "pyhopshive==0.6.4.1.dev0",
    "pyhumps==1.6.1",
    "pyjks==20.0.0",
    "pymysql==1.1.1",
    "pynndescent==0.5.13",
    "pyparsing==2.4.7",
    "pyproject-hooks==1.2.0",
    "pytest==8.0.2",
    "pytest-cov==6.2.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==0.21.1",
    "python-json-logger==3.3.0",
    "python-multipart==0.0.20",
    "python-slugify==8.0.4",
    "pytoolconfig==1.3.1",
    "pytz==2024.2",
    "pytzdata==2020.1",
    "pywavelets==1.8.0",
    "pyyaml==6.0.2",
    "pyzmq==27.0.0",
    "querystring-parser==1.2.4",
    "readchar==4.2.1",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "requests-oauthlib==2.0.0",
    "retrying==1.4.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich==12.6.0",
    "rope==1.13.0",
    "rpds-py==0.25.1",
    "rsa==4.9.1",
    "ruamel-yaml==0.17.17",
    "s3fs==2022.11.0",
    "s3transfer==0.6.2",
    "scikit-learn==1.4.0",
    "scipy==1.11.3",
    "seaborn==0.11.2",
    "semver==2.13.0",
    "send2trash==1.8.3",
    "setuptools==80.9.0",
    "shap==0.48.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "slicer==0.0.8",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==1.4.41",
    "sqlalchemy2-stubs==0.0.2a38",
    "sqlmodel==0.0.8",
    "sqlparse==0.5.3",
    "stack-data==0.6.3",
    "statsmodels==0.14.4",
    "tangled-up-in-unicode==0.2.0",
    "tenacity==9.1.2",
    "termcolor==3.1.0",
    "terminado==0.18.1",
    "text-unidecode==1.3",
    "threadpoolctl==3.6.0",
    "thrift==0.22.0",
    "tinycss2==1.4.0",
    "toml==0.10.2",
    "toolz==1.0.0",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "twofish==0.3.0",
    "typeguard==4.4.4",
    "typer==0.16.0",
    "types-python-dateutil==2.9.0.20250516",
    "types-pyyaml==6.0.12.20250516",
    "typing-extensions==4.14.0",
    "tzlocal==5.3.1",
    "ujson==5.10.0",
    "umap-learn==0.5.7",
    "uri-template==1.3.0",
    "urllib3==1.26.20",
    "uvicorn==0.34.3",
    "visions==0.7.5",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==13.1",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "wordcloud==1.9.4",
    "wrapt==1.17.2",
    "xgboost==3.0.2",
    "yarl==1.20.1",
    "ydata-profiling==4.6.0",
    "yfinance==0.2.63",
    "zipp==3.23.0"
]

[project.scripts]
"stock-project" = "stock_project.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
docs = [
    "docutils<0.21",
    "sphinx>=5.3,<7.3",
    "sphinx_rtd_theme==2.0.0",
    "nbsphinx==0.8.1",
    "sphinx-autodoc-typehints==1.20.2",
    "sphinx_copybutton==0.5.2",
    "ipykernel>=5.3, <7.0",
    "Jinja2<3.2.0",
    "myst-parser>=1.0,<2.1"
]
dev = [
    "pytest-cov~=3.0",
    "pytest-mock>=1.7.1, <2.0",
    "pytest~=7.2",
    "ruff~=0.1.8"
]

[tool.setuptools.dynamic]
version = {attr = "stock_project.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro]
package_name = "stock_project"
project_name = "stock-project"
kedro_init_version = "0.19.14"
tools = "['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure']"
example_pipeline = "True"
source_dir = "src"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/stock_project -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 88
show-fixes = true
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E501"]  # Ruff format takes care of line-too-long

[tool.kedro_telemetry]
project_id = "bdd2ebb53ca942f9b3419807db001ef7"
